switch to Java approach